<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home_menu"
        android:title="@string/home"
        android:icon="@drawable/ic_home" />

    <item
        android:id="@+id/activity_menu"
        android:title="@string/daily_activity"
        android:icon="@drawable/ic_activity" />

    <item
        android:id="@+id/gallery_menu"
        android:title="@string/gallery"
        android:icon="@drawable/ic_gallery" />

    <item
        android:id="@+id/favorite_menu"
        android:title="@string/musikVideo"
        android:icon="@drawable/ic_music_video" />
    <item
        android:id="@+id/profile_menu"
        android:title="@string/profile"
        android:icon="@drawable/ic_profile" />

</menu>